<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_wave"
            android:title="@string/title_menu_current" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/ic_waves"
            android:title="@string/title_menu_forecast" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_menu_comment" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_menu_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/title_menu_exit" />
        </menu>
    </item>

</menu>
