<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAAAAA"
    tools:context="com.meteosurf.meteosurf.fragments.CurrentFragment">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivStar1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_star"
        android:src="@drawable/ic_star_60dp_white"
        app:layout_constraintEnd_toStartOf="@+id/ivStar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivStar2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_star"
        android:src="@drawable/ic_star_60dp_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivStar1"
        app:layout_constraintEnd_toStartOf="@+id/ivStar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar1"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivStar3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_star"
        android:src="@drawable/ic_star_60dp_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivStar2"
        app:layout_constraintEnd_toStartOf="@+id/ivStar4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar2"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivStar4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_star"
        android:src="@drawable/ic_star_60dp_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivStar3"
        app:layout_constraintEnd_toStartOf="@+id/ivStar5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar3"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivStar5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_star"
        android:src="@drawable/ic_star_60dp_white"
        app:layout_constraintBottom_toBottomOf="@+id/ivStar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar4"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/ivWave1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_iv_waves_1"
        android:src="@drawable/ic_waves_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStar1" />

    <TextView
        android:id="@+id/tvSizeWave1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWave1"
        app:layout_constraintEnd_toStartOf="@+id/ivCompass1"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/ivWave1"
        app:layout_constraintTop_toTopOf="@+id/ivWave1"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/ivCompass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_compass"
        android:rotation="0"
        android:src="@drawable/ic_compass"
        app:layout_constraintBottom_toBottomOf="@+id/tvSizeWave1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSizeWave1" />

    <ImageView
        android:id="@+id/ivWave2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_waves_2"
        android:src="@drawable/ic_waves_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWave1" />

    <TextView
        android:id="@+id/tvSizeWave2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWave2"
        app:layout_constraintEnd_toStartOf="@+id/ivCompass2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivWave2"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeWave1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivCompass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_compass"
        android:rotation="0"
        android:src="@drawable/ic_compass"
        app:layout_constraintBottom_toBottomOf="@+id/tvSizeWave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCompass1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivWave3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_waves_3"
        android:src="@drawable/ic_waves_terciary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWave2" />

    <TextView
        android:id="@+id/tvSizeWave3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWave3"
        app:layout_constraintEnd_toStartOf="@+id/ivCompass3"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/ivWave3"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeWave2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivCompass3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_compass"
        android:rotation="0"
        android:src="@drawable/ic_compass"
        app:layout_constraintBottom_toBottomOf="@+id/tvSizeWave3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCompass2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivWind"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_wind"
        android:src="@drawable/ic_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWave3" />

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWind"
        app:layout_constraintEnd_toStartOf="@+id/ivWindDir"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/ivWind"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeWave3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivWindDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_iv_compass"
        android:rotation="0"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tvWind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCompass3"
        app:layout_constraintVertical_bias="0.695" />

    <ImageView
        android:id="@+id/ivWeather"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_iv_weather"
        android:maxHeight="60dp"
        android:maxWidth="60dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWind" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWeather"
        app:layout_constraintStart_toEndOf="@+id/ivWeather"
        app:layout_constraintTop_toTopOf="@+id/ivWeather" />

    <ImageView
        android:id="@+id/ivThermometer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_iv_thermometer"
        android:src="@drawable/ic_thermometer"
        app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
        app:layout_constraintStart_toEndOf="@+id/tvTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvWind"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvProbability"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal|center"
        android:text=""
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivThermometer"
        app:layout_constraintTop_toBottomOf="@+id/tvWind"
        tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>
